--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "typescript": "^5.8.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.14"
   }
 }
