修改配置文件

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         run:  npm install # 或 yarn install，根据你的偏好选择
 
       - name: Generate Static Site
-        run: pnpm generate # 生成静态站点的命令
+        run:  npm run  generate # 生成静态站点的命令
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4 # 这个 action 能将你的构建产物，作为新增内容提交到 gh-pages 分支
