--- a/package.json
+++ b/package.json
@@ -10,20 +10,18 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/content": "^3.4.0",
-    "@nuxt/icon": "^1.11.0",
-    "@nuxt/image": "^1.10.0",
-    "@nuxt/scripts": "^0.11.5",
-    "@nuxt/test-utils": "^3.17.2",
-    "@nuxt/ui": "^3.0.1",
-    "@unhead/vue": "^2.0.2",
-    "ipx": "^3.0.3",
-    "nuxt": "^3.16.1",
-    "typescript": "^5.8.2",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.16",
+    "nuxt": "^3.9.0",
+    "nuxt-icon": "^0.6.8",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "vue": "^3.4.3",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@types/node": "^22.13.14"
+    "@nuxtjs/tailwindcss": "^6.13.2",
+    "@types/node": "^22.13.14",
+    "sass-embedded": "^1.86.0"
   }
 }
